// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompt-enhancement submit popup frames > with a key, the wording path adds what the cap allows > draws the largest body sized to the terminal, so the scroll marker shows 1`] = `
{
  "caretOut": {
    "col": -1,
    "row": -1,
  },
  "frame": "│ ◆ NEXPATH CLI · Prompt enhancement
│ ──────────────────────────────────
│
│ Bug hunt.
│ Your original request remains visible.
│ This body was prepared by Nexpath.
│ Nexpath does not send automatically.
│ Grounded guidance is attached.
│ Shown because this touches a sensitive action — ask for go-ahead before doing it.
│
│ ● Use enhanced prompt
│     My original request (verbatim):
│     Fix the failing payment test, the test failure blocks ci, and explain th
│     e verification. also drop a shadow under the submit button.
│     
│     ↓ 22 more lines below · the whole prompt is included
│     Ctrl+J new line · Ctrl+↑/↓ move line · Enter sends this prompt
│
│ ○ Additional details
│     
│ ○ Use original prompt
│
│ ↑↓ move · Esc cancel",
}
`;

exports[`prompt-enhancement submit popup frames > with a key, the wording path adds what the cap allows > draws the largest body, colour off > titles 1`] = `
[
  "My original request (verbatim)",
  "Test command output",
  "Fixture and mock context",
  "Reproduction and evidence",
  "Best practices and standards",
  "Risk, safety and confirmation",
]
`;

exports[`prompt-enhancement submit popup frames > with a key, the wording path adds what the cap allows > draws the largest body, colour off 1`] = `
{
  "caretOut": {
    "col": 58,
    "row": 38,
  },
  "frame": "│ ◆ NEXPATH CLI · Prompt enhancement
│ ──────────────────────────────────
│
│ Bug hunt.
│ Your original request remains visible.
│ This body was prepared by Nexpath.
│ Nexpath does not send automatically.
│ Grounded guidance is attached.
│ Shown because this touches a sensitive action — ask for go-ahead before doing it.
│
│ ● Use enhanced prompt
│     My original request (verbatim):
│     Fix the failing payment test, the test failure blocks ci, and explain th
│     e verification. also drop a shadow under the submit button.
│     
│     Test command output:
│     - Keep the existing behaviour of the payment gateway client and cover it
│      with a test.
│     
│     Fixture and mock context:
│     - Keep the existing behaviour of the payment gateway client and cover it
│      with a test.
│     
│     Reproduction and evidence:
│     - Keep the existing behaviour of the payment gateway client and cover it
│      with a test.
│     
│     Best practices and standards:
│     - Keep the existing behaviour of the payment gateway client and cover it
│      with a test.
│     
│     Risk, safety and confirmation:
│     - Keep the existing behaviour of the payment gateway client and cover it
│      with a test.
│     - Still, before you do this destructive file or codebase change you must
│      ask me for go-ahead confirmation, and before you ask, confirm the actua
│     l state at ground level by reading the real source. Do not assume, and d
│     o not rely on what you did earlier in this session.
│     Ctrl+J new line · Ctrl+↑/↓ move line · Enter sends this prompt
│
│ ○ Additional details
│     
│ ○ Use original prompt
│
│ ↑↓ move · Esc cancel",
}
`;

exports[`prompt-enhancement submit popup frames > with a key, the wording path adds what the cap allows > draws the largest body, colour on 1`] = `
{
  "caretOut": {
    "col": 58,
    "row": 38,
  },
  "frame": "\\e[36m│\\e[0m \\e[36m\\e[1m◆ NEXPATH CLI · Prompt enhancement\\e[0m
\\e[36m│\\e[0m \\e[2m──────────────────────────────────\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[1mBug hunt.\\e[0m
\\e[36m│\\e[0m Your original request remains visible.
\\e[36m│\\e[0m This body was prepared by Nexpath.
\\e[36m│\\e[0m Nexpath does not send automatically.
\\e[36m│\\e[0m Grounded guidance is attached.
\\e[36m│\\e[0m \\e[90mShown because this touches a sensitive action — ask for go-ahead before doing it.\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[32m●\\e[0m \\e[1mUse enhanced prompt\\e[0m
\\e[36m│\\e[0m     My original request (verbatim):
\\e[36m│\\e[0m     Fix the failing payment test, the test failure blocks ci, and explain th
\\e[36m│\\e[0m     e verification. also drop a shadow under the submit button.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Test command output:
\\e[36m│\\e[0m     - Keep the existing behaviour of the payment gateway client and cover it
\\e[36m│\\e[0m      with a test.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Fixture and mock context:
\\e[36m│\\e[0m     - Keep the existing behaviour of the payment gateway client and cover it
\\e[36m│\\e[0m      with a test.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Reproduction and evidence:
\\e[36m│\\e[0m     - Keep the existing behaviour of the payment gateway client and cover it
\\e[36m│\\e[0m      with a test.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Best practices and standards:
\\e[36m│\\e[0m     - Keep the existing behaviour of the payment gateway client and cover it
\\e[36m│\\e[0m      with a test.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Risk, safety and confirmation:
\\e[36m│\\e[0m     - Keep the existing behaviour of the payment gateway client and cover it
\\e[36m│\\e[0m      with a test.
\\e[36m│\\e[0m     - Still, before you do this destructive file or codebase change you must
\\e[36m│\\e[0m      ask me for go-ahead confirmation, and before you ask, confirm the actua
\\e[36m│\\e[0m     l state at ground level by reading the real source. Do not assume, and d
\\e[36m│\\e[0m     o not rely on what you did earlier in this session.
\\e[36m│\\e[0m     \\e[93mCtrl+J new line · Ctrl+↑/↓ move line · Enter sends this prompt\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[90m○\\e[0m \\e[2mAdditional details\\e[0m
\\e[36m│\\e[0m     
\\e[36m│\\e[0m \\e[90m○\\e[0m \\e[2mUse original prompt\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[2m↑↓ move · Esc cancel\\e[0m",
}
`;

exports[`prompt-enhancement submit popup frames > with a key, the wording path adds what the cap allows > draws the medium body, colour off > titles 1`] = `
[
  "My original request (verbatim)",
  "Context and constraints",
  "Approach and steps",
  "What done looks like",
  "Best practices and standards",
]
`;

exports[`prompt-enhancement submit popup frames > with a key, the wording path adds what the cap allows > draws the medium body, colour off 1`] = `
{
  "caretOut": {
    "col": 20,
    "row": 28,
  },
  "frame": "│ ◆ NEXPATH CLI · Prompt enhancement
│ ──────────────────────────────────
│
│ Shipping something?
│ Your original request remains visible.
│ This body was prepared by Nexpath.
│ Nexpath does not send automatically.
│ Grounded guidance is attached.
│
│ ● Use enhanced prompt
│     My original request (verbatim):
│     Add a retry with exponential backoff to the payment gateway client.
│     
│     Context and constraints:
│     - Keep the existing behaviour of the payment gateway client and cover it
│      with a test.
│     
│     Approach and steps:
│     - Keep the existing behaviour of the payment gateway client and cover it
│      with a test.
│     
│     What done looks like:
│     - Keep the existing behaviour of the payment gateway client and cover it
│      with a test.
│     
│     Best practices and standards:
│     - Keep the existing behaviour of the payment gateway client and cover it
│      with a test.
│     Ctrl+J new line · Ctrl+↑/↓ move line · Enter sends this prompt
│
│ ○ Additional details
│     
│ ○ Use original prompt
│
│ ↑↓ move · Esc cancel",
}
`;

exports[`prompt-enhancement submit popup frames > with a key, the wording path adds what the cap allows > draws the medium body, colour on 1`] = `
{
  "caretOut": {
    "col": 20,
    "row": 28,
  },
  "frame": "\\e[36m│\\e[0m \\e[36m\\e[1m◆ NEXPATH CLI · Prompt enhancement\\e[0m
\\e[36m│\\e[0m \\e[2m──────────────────────────────────\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[1mShipping something?\\e[0m
\\e[36m│\\e[0m Your original request remains visible.
\\e[36m│\\e[0m This body was prepared by Nexpath.
\\e[36m│\\e[0m Nexpath does not send automatically.
\\e[36m│\\e[0m Grounded guidance is attached.
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[32m●\\e[0m \\e[1mUse enhanced prompt\\e[0m
\\e[36m│\\e[0m     My original request (verbatim):
\\e[36m│\\e[0m     Add a retry with exponential backoff to the payment gateway client.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Context and constraints:
\\e[36m│\\e[0m     - Keep the existing behaviour of the payment gateway client and cover it
\\e[36m│\\e[0m      with a test.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Approach and steps:
\\e[36m│\\e[0m     - Keep the existing behaviour of the payment gateway client and cover it
\\e[36m│\\e[0m      with a test.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     What done looks like:
\\e[36m│\\e[0m     - Keep the existing behaviour of the payment gateway client and cover it
\\e[36m│\\e[0m      with a test.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Best practices and standards:
\\e[36m│\\e[0m     - Keep the existing behaviour of the payment gateway client and cover it
\\e[36m│\\e[0m      with a test.
\\e[36m│\\e[0m     \\e[93mCtrl+J new line · Ctrl+↑/↓ move line · Enter sends this prompt\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[90m○\\e[0m \\e[2mAdditional details\\e[0m
\\e[36m│\\e[0m     
\\e[36m│\\e[0m \\e[90m○\\e[0m \\e[2mUse original prompt\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[2m↑↓ move · Esc cancel\\e[0m",
}
`;

exports[`prompt-enhancement submit popup frames > with a key, the wording path adds what the cap allows > draws the refinement view, colour off 1`] = `
{
  "caretOut": {
    "col": 20,
    "row": 28,
  },
  "frame": "│ ◆ NEXPATH CLI · Prompt enhancement
│ ──────────────────────────────────
│
│ Shipping something?
│ Your original request remains visible.
│ This body was prepared by Nexpath.
│ Nexpath does not send automatically.
│ Grounded guidance is attached.
│
│ ● Use enhanced prompt
│     My original request (verbatim):
│     Add a retry with exponential backoff to the payment gateway client.
│     
│     Context and constraints:
│     - Keep the existing behaviour of the payment gateway client and cover it
│      with a test.
│     
│     Approach and steps:
│     - Keep the existing behaviour of the payment gateway client and cover it
│      with a test.
│     
│     What done looks like:
│     - Keep the existing behaviour of the payment gateway client and cover it
│      with a test.
│     
│     Best practices and standards:
│     - Keep the existing behaviour of the payment gateway client and cover it
│      with a test.
│     Ctrl+J new line · Ctrl+↑/↓ move line · Enter sends this prompt
│
│ ○ ← Go back
│
│ ↑↓ move · Esc cancel",
}
`;

exports[`prompt-enhancement submit popup frames > with a key, the wording path adds what the cap allows > draws the refinement view, colour on 1`] = `
{
  "caretOut": {
    "col": 20,
    "row": 28,
  },
  "frame": "\\e[36m│\\e[0m \\e[36m\\e[1m◆ NEXPATH CLI · Prompt enhancement\\e[0m
\\e[36m│\\e[0m \\e[2m──────────────────────────────────\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[1mShipping something?\\e[0m
\\e[36m│\\e[0m Your original request remains visible.
\\e[36m│\\e[0m This body was prepared by Nexpath.
\\e[36m│\\e[0m Nexpath does not send automatically.
\\e[36m│\\e[0m Grounded guidance is attached.
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[32m●\\e[0m \\e[1mUse enhanced prompt\\e[0m
\\e[36m│\\e[0m     My original request (verbatim):
\\e[36m│\\e[0m     Add a retry with exponential backoff to the payment gateway client.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Context and constraints:
\\e[36m│\\e[0m     - Keep the existing behaviour of the payment gateway client and cover it
\\e[36m│\\e[0m      with a test.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Approach and steps:
\\e[36m│\\e[0m     - Keep the existing behaviour of the payment gateway client and cover it
\\e[36m│\\e[0m      with a test.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     What done looks like:
\\e[36m│\\e[0m     - Keep the existing behaviour of the payment gateway client and cover it
\\e[36m│\\e[0m      with a test.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Best practices and standards:
\\e[36m│\\e[0m     - Keep the existing behaviour of the payment gateway client and cover it
\\e[36m│\\e[0m      with a test.
\\e[36m│\\e[0m     \\e[93mCtrl+J new line · Ctrl+↑/↓ move line · Enter sends this prompt\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[90m○\\e[0m \\e[2m← Go back\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[2m↑↓ move · Esc cancel\\e[0m",
}
`;

exports[`prompt-enhancement submit popup frames > without a key, the body is the floor the pruner keeps > draws the confirmation-carrying body, colour off > titles 1`] = `
[
  "My original request (verbatim)",
  "Test command output",
  "Best practices and standards",
  "Risk, safety and confirmation",
]
`;

exports[`prompt-enhancement submit popup frames > without a key, the body is the floor the pruner keeps > draws the confirmation-carrying body, colour off 1`] = `
{
  "caretOut": {
    "col": 58,
    "row": 33,
  },
  "frame": "│ ◆ NEXPATH CLI · Prompt enhancement
│ ──────────────────────────────────
│
│ Bug hunt.
│ Your original request remains visible.
│ This body was prepared by Nexpath.
│ Nexpath does not send automatically.
│ Grounded guidance is attached.
│ Shown because this touches a sensitive action — ask for go-ahead before doing it.
│
│ ● Use enhanced prompt
│     My original request (verbatim):
│     Fix the failing payment test, the test failure blocks ci, and explain th
│     e verification. also drop a shadow under the submit button.
│     
│     Test command output:
│     - Cover Test command output for this request with concrete, source-backe
│     d specifics — state what is required, how to implement it, and how to ve
│     rify it.
│     
│     Best practices and standards:
│     - The current source signal reports stage as task_breakdown → implementa
│     tion.
│     - Treat what your recent practice shows as a working constraint, and tur
│     n it into direct implementation guidance.
│     
│     Risk, safety and confirmation:
│     - Name risky or irreversible actions, ask for required confirmation, and
│      include rollback or recovery checks.
│     - Still, before you do this destructive file or codebase change you must
│      ask me for go-ahead confirmation, and before you ask, confirm the actua
│     l state at ground level by reading the real source. Do not assume, and d
│     o not rely on what you did earlier in this session.
│     Ctrl+J new line · Ctrl+↑/↓ move line · Enter sends this prompt
│
│ ○ Additional details
│     
│ ○ Use original prompt
│
│ ↑↓ move · Esc cancel",
}
`;

exports[`prompt-enhancement submit popup frames > without a key, the body is the floor the pruner keeps > draws the confirmation-carrying body, colour on 1`] = `
{
  "caretOut": {
    "col": 58,
    "row": 33,
  },
  "frame": "\\e[36m│\\e[0m \\e[36m\\e[1m◆ NEXPATH CLI · Prompt enhancement\\e[0m
\\e[36m│\\e[0m \\e[2m──────────────────────────────────\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[1mBug hunt.\\e[0m
\\e[36m│\\e[0m Your original request remains visible.
\\e[36m│\\e[0m This body was prepared by Nexpath.
\\e[36m│\\e[0m Nexpath does not send automatically.
\\e[36m│\\e[0m Grounded guidance is attached.
\\e[36m│\\e[0m \\e[90mShown because this touches a sensitive action — ask for go-ahead before doing it.\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[32m●\\e[0m \\e[1mUse enhanced prompt\\e[0m
\\e[36m│\\e[0m     My original request (verbatim):
\\e[36m│\\e[0m     Fix the failing payment test, the test failure blocks ci, and explain th
\\e[36m│\\e[0m     e verification. also drop a shadow under the submit button.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Test command output:
\\e[36m│\\e[0m     - Cover Test command output for this request with concrete, source-backe
\\e[36m│\\e[0m     d specifics — state what is required, how to implement it, and how to ve
\\e[36m│\\e[0m     rify it.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Best practices and standards:
\\e[36m│\\e[0m     - The current source signal reports stage as task_breakdown → implementa
\\e[36m│\\e[0m     tion.
\\e[36m│\\e[0m     - Treat what your recent practice shows as a working constraint, and tur
\\e[36m│\\e[0m     n it into direct implementation guidance.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Risk, safety and confirmation:
\\e[36m│\\e[0m     - Name risky or irreversible actions, ask for required confirmation, and
\\e[36m│\\e[0m      include rollback or recovery checks.
\\e[36m│\\e[0m     - Still, before you do this destructive file or codebase change you must
\\e[36m│\\e[0m      ask me for go-ahead confirmation, and before you ask, confirm the actua
\\e[36m│\\e[0m     l state at ground level by reading the real source. Do not assume, and d
\\e[36m│\\e[0m     o not rely on what you did earlier in this session.
\\e[36m│\\e[0m     \\e[93mCtrl+J new line · Ctrl+↑/↓ move line · Enter sends this prompt\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[90m○\\e[0m \\e[2mAdditional details\\e[0m
\\e[36m│\\e[0m     
\\e[36m│\\e[0m \\e[90m○\\e[0m \\e[2mUse original prompt\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[2m↑↓ move · Esc cancel\\e[0m",
}
`;

exports[`prompt-enhancement submit popup frames > without a key, the body is the floor the pruner keeps > draws the small body, colour off > titles 1`] = `
[
  "My original request (verbatim)",
  "Context and constraints",
  "Best practices and standards",
]
`;

exports[`prompt-enhancement submit popup frames > without a key, the body is the floor the pruner keeps > draws the small body, colour off 1`] = `
{
  "caretOut": {
    "col": 48,
    "row": 22,
  },
  "frame": "│ ◆ NEXPATH CLI · Prompt enhancement
│ ──────────────────────────────────
│
│ Shipping something?
│ Your original request remains visible.
│ This body was prepared by Nexpath.
│ Nexpath does not send automatically.
│ Grounded guidance is attached.
│
│ ● Use enhanced prompt
│     My original request (verbatim):
│     Add a retry with exponential backoff to the payment gateway client.
│     
│     Context and constraints:
│     - Carry forward relevant constraints, limits, environment facts, and use
│     r instructions that affect the work.
│     
│     Best practices and standards:
│     - The current source signal reports stage as task_breakdown → implementa
│     tion.
│     - Treat what your recent practice shows as a working constraint, and tur
│     n it into direct implementation guidance.
│     Ctrl+J new line · Ctrl+↑/↓ move line · Enter sends this prompt
│
│ ○ Additional details
│     
│ ○ Use original prompt
│
│ ↑↓ move · Esc cancel",
}
`;

exports[`prompt-enhancement submit popup frames > without a key, the body is the floor the pruner keeps > draws the small body, colour on 1`] = `
{
  "caretOut": {
    "col": 48,
    "row": 22,
  },
  "frame": "\\e[36m│\\e[0m \\e[36m\\e[1m◆ NEXPATH CLI · Prompt enhancement\\e[0m
\\e[36m│\\e[0m \\e[2m──────────────────────────────────\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[1mShipping something?\\e[0m
\\e[36m│\\e[0m Your original request remains visible.
\\e[36m│\\e[0m This body was prepared by Nexpath.
\\e[36m│\\e[0m Nexpath does not send automatically.
\\e[36m│\\e[0m Grounded guidance is attached.
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[32m●\\e[0m \\e[1mUse enhanced prompt\\e[0m
\\e[36m│\\e[0m     My original request (verbatim):
\\e[36m│\\e[0m     Add a retry with exponential backoff to the payment gateway client.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Context and constraints:
\\e[36m│\\e[0m     - Carry forward relevant constraints, limits, environment facts, and use
\\e[36m│\\e[0m     r instructions that affect the work.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Best practices and standards:
\\e[36m│\\e[0m     - The current source signal reports stage as task_breakdown → implementa
\\e[36m│\\e[0m     tion.
\\e[36m│\\e[0m     - Treat what your recent practice shows as a working constraint, and tur
\\e[36m│\\e[0m     n it into direct implementation guidance.
\\e[36m│\\e[0m     \\e[93mCtrl+J new line · Ctrl+↑/↓ move line · Enter sends this prompt\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[90m○\\e[0m \\e[2mAdditional details\\e[0m
\\e[36m│\\e[0m     
\\e[36m│\\e[0m \\e[90m○\\e[0m \\e[2mUse original prompt\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[2m↑↓ move · Esc cancel\\e[0m",
}
`;

exports[`prompt-enhancement submit popup frames on macOS > names the Mac keys in the shortcut hint 1`] = `
{
  "caretOut": {
    "col": 48,
    "row": 22,
  },
  "frame": "│ ◆ NEXPATH CLI · Prompt enhancement
│ ──────────────────────────────────
│
│ Shipping something?
│ Your original request remains visible.
│ This body was prepared by Nexpath.
│ Nexpath does not send automatically.
│ Grounded guidance is attached.
│
│ ● Use enhanced prompt
│     My original request (verbatim):
│     Add a retry with exponential backoff to the payment gateway client.
│     
│     Context and constraints:
│     - Carry forward relevant constraints, limits, environment facts, and use
│     r instructions that affect the work.
│     
│     Best practices and standards:
│     - The current source signal reports stage as task_breakdown → implementa
│     tion.
│     - Treat what your recent practice shows as a working constraint, and tur
│     n it into direct implementation guidance.
│     Cmd+J new line · Cmd+↑/↓ move line · Enter sends this prompt
│
│ ○ Additional details
│     
│ ○ Use original prompt
│
│ ↑↓ move · Esc cancel",
}
`;

exports[`prompt-enhancement submit popup frames with applied details > draws the body with applied details, colour off 1`] = `
{
  "caretOut": {
    "col": 36,
    "row": 25,
  },
  "frame": "│ ◆ NEXPATH CLI · Prompt enhancement
│ ──────────────────────────────────
│
│ Shipping something?
│ Your original request remains visible.
│ This body was prepared by Nexpath.
│ Nexpath does not send automatically.
│ Grounded guidance is attached.
│
│ ● Use enhanced prompt
│     My original request (verbatim):
│     Add a retry with exponential backoff to the payment gateway client.
│     
│     Context and constraints:
│     - Carry forward relevant constraints, limits, environment facts, and use
│     r instructions that affect the work.
│     
│     Best practices and standards:
│     - The current source signal reports stage as task_breakdown → implementa
│     tion.
│     - Treat what your recent practice shows as a working constraint, and tur
│     n it into direct implementation guidance.
│     
│     Additional details to incorporate:
│     Keep the retry count at five.
│     Ctrl+J new line · Ctrl+↑/↓ move line · Enter sends this prompt
│
│ ○ Additional details
│     
│ ○ Use original prompt
│
│ ↑↓ move · Esc cancel",
}
`;

exports[`prompt-enhancement submit popup frames with applied details > draws the body with applied details, colour on 1`] = `
{
  "caretOut": {
    "col": 36,
    "row": 25,
  },
  "frame": "\\e[36m│\\e[0m \\e[36m\\e[1m◆ NEXPATH CLI · Prompt enhancement\\e[0m
\\e[36m│\\e[0m \\e[2m──────────────────────────────────\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[1mShipping something?\\e[0m
\\e[36m│\\e[0m Your original request remains visible.
\\e[36m│\\e[0m This body was prepared by Nexpath.
\\e[36m│\\e[0m Nexpath does not send automatically.
\\e[36m│\\e[0m Grounded guidance is attached.
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[32m●\\e[0m \\e[1mUse enhanced prompt\\e[0m
\\e[36m│\\e[0m     My original request (verbatim):
\\e[36m│\\e[0m     Add a retry with exponential backoff to the payment gateway client.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Context and constraints:
\\e[36m│\\e[0m     - Carry forward relevant constraints, limits, environment facts, and use
\\e[36m│\\e[0m     r instructions that affect the work.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Best practices and standards:
\\e[36m│\\e[0m     - The current source signal reports stage as task_breakdown → implementa
\\e[36m│\\e[0m     tion.
\\e[36m│\\e[0m     - Treat what your recent practice shows as a working constraint, and tur
\\e[36m│\\e[0m     n it into direct implementation guidance.
\\e[36m│\\e[0m     
\\e[36m│\\e[0m     Additional details to incorporate:
\\e[36m│\\e[0m     Keep the retry count at five.
\\e[36m│\\e[0m     \\e[93mCtrl+J new line · Ctrl+↑/↓ move line · Enter sends this prompt\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[90m○\\e[0m \\e[2mAdditional details\\e[0m
\\e[36m│\\e[0m     
\\e[36m│\\e[0m \\e[90m○\\e[0m \\e[2mUse original prompt\\e[0m
\\e[36m│\\e[0m
\\e[36m│\\e[0m \\e[2m↑↓ move · Esc cancel\\e[0m",
}
`;
